# RFA

./: Cargo.toml  README.md  db.json
src/: db.rs  main.rs  structs.rs
