[package]
name = "rfa"
version = "0.1.0"
authors = ["Oler <roodrigoprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.93"